fix(styling): added gap between filter-chips in filterbutton

--- a/next-tavla/src/Admin/scenarios/Boards/components/FilterButton/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/Boards/components/FilterButton/styles.module.css
@@ -1,5 +1,6 @@
 .tagsFilterPopover {
     max-width: 20rem;
+    display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
 }
